tests/NormalTests/paczka1/fuzzy1/76031030.err
Error in line 14: S556 S556 58,0
Error in line 23: 7DoSyFhU S556 1,6
Error in line 27: 7DoSyFhU S55 0,9
